# bincode-core

./: Cargo.toml  readme.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
src/: buffer_writer.rs  deserialize.rs  lib.rs  serialize.rs  size_checker.rs
src/config/: int.rs  internal.rs  limit.rs  mod.rs  trailing.rs
src/traits/: core_read.rs  core_write.rs  impl_embedded_hal.rs  mod.rs
tests/: simple.rs  simple_config_default.rs  simple_fixint.rs
