[package]
name = "bincode_core"
version = "0.1.0"
authors = [
    "Zoey Riordan <zoey@dos.cafe>",
    "Trangar <victor.koenders@gmail.com>"
]
edition = "2018"

[dependencies.byteorder]
version = "1.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false

[dev-dependencies]
serde_derive = "1.0"

[features]
default = []
alloc = ["serde/alloc"]

# The std feature is necessary when compiling serde with std
std = []
